# rustfam

./: Cargo.toml  README.md
data/: fam1.txt
src/: main.rs
src/model/: family.rs  mod.rs  person.rs
src/model/family/: close_family.rs  extended_family.rs  family.rs  mod.rs  pairing.rs  tree.rs
