[package]
name = "FamRust"
version = "0.1.0"
authors = ["aozkan <alper.ozkan.p@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_test = "1.0.126"

[[bin]]
name = "fam_rust"
path = "src/main.rs"
